// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InvitationList.vue renders 1`] = `
<div>
  <div
    class="invitation-list"
  >
    <ul>
      <client-only-stub>
        <li
          class="invitation"
        >
          <div
            class="column1"
          >
            <div
              class="code"
            >
              
      test-invite-code-1
      
              <span
                class="mdash"
              >
                —
              </span>
               
              <span
                class="comment"
              >
                test-comment
              </span>
            </div>
             
            <div>
              <span>
                
        invite-codes.redeemed-count-0
      
              </span>
            </div>
          </div>
           
          <div
            class="actions"
          >
            <button
              aria-label="invite-codes.copy-code"
              class="copy-button base-button --icon-only --circle"
              type="button"
            >
              <span
                class="base-icon"
              >
                <!---->
              </span>
               
              <!---->
               
            </button>
             
            <button
              aria-label="invite-codes.invalidate"
              class="invalidate-button base-button --icon-only --circle"
              type="button"
            >
              <span
                class="base-icon"
              >
                <!---->
              </span>
               
              <!---->
               
            </button>
          </div>
        </li>
        <li
          class="invitation"
        >
          <div
            class="column1"
          >
            <div
              class="code"
            >
              
      test-invite-code-2
      
              <span
                class="mdash"
              >
                —
              </span>
               
              <span
                class="comment"
              >
                test-comment-2
              </span>
            </div>
             
            <div>
              <span>
                
        invite-codes.redeemed-count
      
              </span>
            </div>
          </div>
           
          <div
            class="actions"
          >
            <button
              aria-label="invite-codes.copy-code"
              class="copy-button base-button --icon-only --circle"
              type="button"
            >
              <span
                class="base-icon"
              >
                <!---->
              </span>
               
              <!---->
               
            </button>
             
            <button
              aria-label="invite-codes.invalidate"
              class="invalidate-button base-button --icon-only --circle"
              type="button"
            >
              <span
                class="base-icon"
              >
                <!---->
              </span>
               
              <!---->
               
            </button>
          </div>
        </li>
      </client-only-stub>
    </ul>
     
    <div
      class="create-invitation create-invitation"
    >
      <div>
        invite-codes.generate-code-explanation
      </div>
       
      <form
        class="generate-invite-code-form"
      >
        <div
          class="ds-form-item ds-input-size-base"
        >
          <label
            class="ds-input-label"
            style="display: none;"
          >
            
  

          </label>
          <div
            class="ds-input-wrap"
          >
            <!---->
            <input
              class="ds-input"
              name="comment"
              placeholder="invite-codes.comment-placeholder"
              tabindex="0"
              type="text"
            />
            <!---->
          </div>
          <transition-stub
            name="ds-input-error"
          >
            <div
              class="ds-input-error"
              style="display: none;"
            >
              
    
  
            </div>
          </transition-stub>
        </div>
         
        <button
          aria-label="invite-codes.generate-code"
          class="generate-invite-code base-button --icon-only --circle"
          type="submit"
        >
          <span
            class="base-icon"
          >
            <!---->
          </span>
           
          <!---->
           
        </button>
      </form>
    </div>
  </div>
</div>
`;

exports[`InvitationList.vue renders empty state 1`] = `
<div>
  <div
    class="invitation-list"
  >
    <div
      class="no-invitation"
    >
      
    invite-codes.no-links
  
    </div>
     
    <div
      class="create-invitation create-invitation"
    >
      <div>
        invite-codes.generate-code-explanation
      </div>
       
      <form
        class="generate-invite-code-form"
      >
        <div
          class="ds-form-item ds-input-size-base"
        >
          <label
            class="ds-input-label"
            style="display: none;"
          >
            
  

          </label>
          <div
            class="ds-input-wrap"
          >
            <!---->
            <input
              class="ds-input"
              name="comment"
              placeholder="invite-codes.comment-placeholder"
              tabindex="0"
              type="text"
            />
            <!---->
          </div>
          <transition-stub
            name="ds-input-error"
          >
            <div
              class="ds-input-error"
              style="display: none;"
            >
              
    
  
            </div>
          </transition-stub>
        </div>
         
        <button
          aria-label="invite-codes.generate-code"
          class="generate-invite-code base-button --icon-only --circle"
          type="submit"
        >
          <span
            class="base-icon"
          >
            <!---->
          </span>
           
          <!---->
           
        </button>
      </form>
    </div>
  </div>
</div>
`;
